// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<WithStyles(ForwardRef(Tooltip))
  classes={
    Object {
      "popper": "popper",
      "tooltip": "tooltip",
    }
  }
  enterDelay={300}
  leaveDelay={3600000}
  placement="top"
  style={
    Object {
      "borderLeftColor": "red",
    }
  }
  title={
    <Styled(MuiBox)
      className="box"
      data-qa="snap-qa"
    >
      SnapTitle
    </Styled(MuiBox)>
  }
>
  <span>
    Snappy Text
  </span>
</WithStyles(ForwardRef(Tooltip))>
`;

exports[`Snapshot Testing Required Props 1`] = `
<WithStyles(ForwardRef(Tooltip))
  classes={
    Object {
      "popper": "popper",
      "tooltip": "tooltip",
    }
  }
  enterDelay={300}
  placement="top"
  title={
    <Styled(MuiBox)
      className="box"
    >
      SnapTitle
    </Styled(MuiBox)>
  }
>
  <span>
    Snappy Text
  </span>
</WithStyles(ForwardRef(Tooltip))>
`;
